--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
-      {% load staticfiles %}
+    {% load staticfiles %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Jonathan Farinloye</title>
+    <title>{{ blog.title }}</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -17,56 +17,36 @@
 
   <body>
     <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{% url 'home' %}">Farinloye Jonathan</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav ml-auto">
-        <a class="nav-item nav-link" href="https://twitter.com">Twitter</a>
-        <a class="nav-item nav-link" href="{% static 'resume.pdf' %}">Resume</a>
-        <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
-      </div>
-    </div>
-  </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="{% url 'home' %}">Farinloye Jonathan</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ml-auto">
+            <a class="nav-item nav-link" href="https://twitter.com">Twitter</a>
+            <a class="nav-item nav-link" href="{% static 'resume.pdf' %}">Resume</a>
+            <a class="nav-item nav-link active" href="{% url 'allblogs' %}">Blog</a>
+          </div>
+        </div>
+      </nav>
     </header>
 
     <main role="main">
-
-      <section class="jumbotron text-center">
-        <div class="container">
-          <h1 class="jumbotron-heading">Hello! I'm Jonathan</h1>
-          <p class="lead text-muted">Hey! My name is Jonathan Farinloye and I am learning how to make websites based on Django. Which I think is pretty cool</p>
-            <img src="{% static 'jay.jpg' %}" height="200" />
-          <p>
-              <a href="mailto:farinloyejonathan@gmail.com" class="btn btn-primary my-2">Email Me</a>
-          </p>
-        </div>
-      </section>
-
-      <div class="album py-5 bg-light">
         <div class="container">
 
-          <div class="row">
-
-            {% for job in jobs.all %}
-            <div class="col-md-4">
-              <div class="card mb-4 shadow-sm">
-                <img class="card-img-top" src="{{ job.image.url }}"/>
+            <div>
+              <div class="shadow-sm">
+                  <h3 class="card-text text-center">{{ blog.title }}</h3>
+                  <p class="text-center">{{ blog.date }}</p>
+                <img class="img-fluid" src="{{ blog.image.url }}" height=100%/>
                 <div class="card-body">
-                  <p class="card-text">{{ job.summary }}</p>
+
+                    <p>{{ blog.body }}</p>
                 </div>
               </div>
             </div>
-            {% endfor %}
-
-
-            </div>
-          </div>
         </div>
-
-
     </main>
 
     <footer class="text-muted">
